Refactored cache and source code